fix body overflow

--- a/client/index.scss
+++ b/client/index.scss
@@ -1,6 +1,9 @@
 body {
   font-family: 'Montserrat';
   margin: 0px;
+  height: 100%;
+  width: 100%;
+  background-color: #EDF2F6
 }
 
 h1, h2, h3, h4, h4 {
